# poseidon

./: README.md  pyproject.toml
experiments/: instantiate_model.py  run_inference.py
src/poseidon/scOT/: inference.py  train.py  trainer.py
src/poseidon/scOT/problems/elliptic/: helmholtz.py  poisson.py
src/poseidon/scOT/problems/fluids/: compressible.py  incompressible.py
src/poseidon/scOT/problems/reaction_diffusion/: allen_cahn.py
src/poseidon/scOT/problems/wave/: acoustic.py
