[project]
name = "poseidon"
version = "0.1.0"
description = "Foundation models for PDEs based on a scalable Operator Transformer"
readme = "README.md"
authors = [
    { name = "camlab-ethz" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.31.0",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "transformers==4.29.2",
    "wandb==0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
